[gd_scene load_steps=11 format=3 uid="uid://bouy5qlcenfn7"]

[ext_resource type="FontFile" uid="uid://cc4n1yg7bibc8" path="res://assets/fonts/paint/TMT-Paint-Regular.otf" id="1_mvrpb"]
[ext_resource type="Texture2D" uid="uid://di4xifhmeul7k" path="res://logo.svg" id="1_nseft"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_y5hoe"]
[ext_resource type="PackedScene" uid="uid://b75o8vpamtdpb" path="res://scenes/debug.tscn" id="2_n4vba"]
[ext_resource type="Texture2D" uid="uid://bis0eay2vp4u4" path="res://assets/hud/button.tga" id="3_b4c1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65l1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i76eg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7rxt7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x11rw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0sgr4"]
texture = ExtResource("3_b4c1i")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5hoe")
first_level = ExtResource("2_n4vba")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_65l1u")

[node name="Container" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.5
offset_top = -274.0
offset_right = 224.5
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelLogo" type="Panel" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_styles/panel = SubResource("StyleBoxEmpty_i76eg")

[node name="TextureRect" type="TextureRect" parent="Panel/Container/PanelLogo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nseft")

[node name="PanelName" type="Panel" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7rxt7")

[node name="GameName" type="Label" parent="Panel/Container/PanelName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mvrpb")
theme_override_font_sizes/font_size = 50
text = "Unitum"
horizontal_alignment = 1

[node name="NewGameContainer" type="Panel" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_x11rw")

[node name="TextureRect" type="TextureRect" parent="Panel/Container/NewGameContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.5
offset_top = -210.0
offset_right = 126.5
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_b4c1i")

[node name="NewGameButton" type="Button" parent="Panel/Container/NewGameContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.5
offset_top = -160.0
offset_right = 98.5
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_mvrpb")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_0sgr4")
text = "New Game"
flat = true

[node name="ExitContainer" type="Panel" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_x11rw")

[node name="TextureRect" type="TextureRect" parent="Panel/Container/ExitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.5
offset_top = -250.0
offset_right = 126.5
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_b4c1i")

[node name="ExitButton" type="Button" parent="Panel/Container/ExitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.5
offset_top = -200.0
offset_right = 107.5
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_mvrpb")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_0sgr4")
text = "Exit"
flat = true

[connection signal="pressed" from="Panel/Container/NewGameContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Panel/Container/ExitContainer/ExitButton" to="." method="_on_exit_button_pressed"]
